--- a/.tekton/actions-pull-request.yaml
+++ b/.tekton/actions-pull-request.yaml
@@ -337,7 +337,7 @@ spec:
         - name: name
           value: clamav-scan
         - name: bundle
-          value: quay.io/redhat-appstudio-tekton-catalog/task-clamav-scan:0.1@sha256:353fa2cda9855217cfcec3303973b666a10f384795630cf0eb13b874c24b0f7a
+          value: quay.io/redhat-appstudio-tekton-catalog/task-clamav-scan:0.1
         - name: kind
           value: task
         resolver: bundles
